Lagt til endre arbeidsforhold command og consumer